// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TurborepoProject should have no build job in root for when parallelWorkflows are on 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".

name: build
on:
  pull_request: {}
  workflow_dispatch: {}
jobs:
  build:
    runs-on: ubuntu-latest
    permissions:
      contents: write
    outputs:
      self_mutation_happened: \${{ steps.self_mutation.outputs.self_mutation_happened }}
    env:
      CI: \\"true\\"
    steps:
      - name: Checkout
        uses: actions/checkout@v2
        with:
          ref: \${{ github.event.pull_request.head.ref }}
          repository: \${{ github.event.pull_request.head.repo.full_name }}
      - name: Setup Node.js
        uses: actions/setup-node@v2
        with:
          cache: yarn
          cache-dependency-path: \\"**/yarn.lock\\"
      - name: Install dependencies
        run: yarn install --check-files
      - name: build
        run: npx projen build
      - id: self_mutation
        name: Find mutations
        run: |-
          git add .
          git diff --staged --patch --exit-code > .repo.patch || echo \\"::set-output name=self_mutation_happened::true\\"
      - if: steps.self_mutation.outputs.self_mutation_happened
        name: Upload patch
        uses: actions/upload-artifact@v2
        with:
          name: .repo.patch
          path: .repo.patch
      - name: Fail build on mutation
        if: steps.self_mutation.outputs.self_mutation_happened
        run: |-
          echo \\"::error::Files were changed during build (see build log). If this was triggered from a fork, you will need to update your branch.\\"
          cat .repo.patch
          exit 1
      - name: Upload artifact
        uses: actions/upload-artifact@v2.1.1
        with:
          name: build-artifact
          path: dist
  turbo:
    name: build
    needs: build
    runs-on: ubuntu-latest
    permissions:
      actions: read
      contents: read
    if: \\"! needs.build.outputs.self_mutation_happened\\"
    steps:
      - name: Download build artifacts
        uses: actions/download-artifact@v2
        with:
          name: build-artifact
          path: dist
      - name: Checkout
        uses: actions/checkout@v2
      - name: Setup turbo cache
        uses: felixmosh/turborepo-gh-artifacts@v1
        with:
          repo-token: \${{ secrets.GITHUB_TOKEN }}
          server-token: \${{ github.sha }}
      - name: Setup Node.js
        uses: actions/setup-node@v2
        with:
          cache: yarn
          cache-dependency-path: \\"**/yarn.lock\\"
      - name: Install dependencies
        run: yarn install --check-files --frozen-lockfile
      - name: Build
        run: npx turbo run build --api=\\"http://127.0.0.1:9080\\" --token=\\"\${{ github.sha }}\\" --team=\\"\${{ github.repository_owner }}\\" --scope=\\"\${{ matrix.scope }}\\" --include-dependencies
    strategy:
      fail-fast: true
      matrix:
        scope:
          - bar
          - baz
"
`;

exports[`TurborepoProject should have one build job in root for when parallelWorkflows are off 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".

name: build
on:
  pull_request: {}
  workflow_dispatch: {}
jobs:
  build:
    runs-on: ubuntu-latest
    permissions:
      contents: write
    outputs:
      self_mutation_happened: \${{ steps.self_mutation.outputs.self_mutation_happened }}
    env:
      CI: \\"true\\"
    steps:
      - name: Checkout
        uses: actions/checkout@v2
        with:
          ref: \${{ github.event.pull_request.head.ref }}
          repository: \${{ github.event.pull_request.head.repo.full_name }}
      - name: Setup Node.js
        uses: actions/setup-node@v2
        with:
          cache: yarn
          cache-dependency-path: \\"**/yarn.lock\\"
      - name: Setup turbo cache
        uses: felixmosh/turborepo-gh-artifacts@v1
        with:
          repo-token: \${{ secrets.GITHUB_TOKEN }}
          server-token: \${{ github.sha }}
      - name: Install dependencies
        run: yarn install --check-files
      - name: build
        run: npx projen build
      - id: self_mutation
        name: Find mutations
        run: |-
          git add .
          git diff --staged --patch --exit-code > .repo.patch || echo \\"::set-output name=self_mutation_happened::true\\"
      - if: steps.self_mutation.outputs.self_mutation_happened
        name: Upload patch
        uses: actions/upload-artifact@v2
        with:
          name: .repo.patch
          path: .repo.patch
      - name: Fail build on mutation
        if: steps.self_mutation.outputs.self_mutation_happened
        run: |-
          echo \\"::error::Files were changed during build (see build log). If this was triggered from a fork, you will need to update your branch.\\"
          cat .repo.patch
          exit 1
      - name: Upload artifact
        uses: actions/upload-artifact@v2.1.1
        with:
          name: build-artifact
          path: dist
  turbo:
    name: build
    needs: build
    runs-on: ubuntu-latest
    permissions:
      actions: read
      contents: read
    if: \\"! needs.build.outputs.self_mutation_happened\\"
    steps:
      - name: Download build artifacts
        uses: actions/download-artifact@v2
        with:
          name: build-artifact
          path: dist
      - name: Checkout
        uses: actions/checkout@v2
      - name: Setup turbo cache
        uses: felixmosh/turborepo-gh-artifacts@v1
        with:
          repo-token: \${{ secrets.GITHUB_TOKEN }}
          server-token: \${{ github.sha }}
      - name: Setup Node.js
        uses: actions/setup-node@v2
        with:
          cache: yarn
          cache-dependency-path: \\"**/yarn.lock\\"
      - name: Setup turbo cache
        uses: felixmosh/turborepo-gh-artifacts@v1
        with:
          repo-token: \${{ secrets.GITHUB_TOKEN }}
          server-token: \${{ github.sha }}
      - name: Install dependencies
        run: yarn install --check-files --frozen-lockfile
      - name: Build
        run: npx turbo run build --api=\\"http://127.0.0.1:9080\\" --token=\\"\${{ github.sha }}\\" --team=\\"\${{ github.repository_owner }}\\"
    strategy: {}
"
`;
